# clothes-validator

./: .gitignore  README.md  pyproject.toml  validation_labels.csv
clothes_validator/: create_model.py  custom_image_dataset.py  dataset_config.py  dataset_label.py  model_handler.py  neural_network.py
test/: conftest.py  test_custom_image_dataset.py  test_model.py
